--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -8,6 +8,6 @@
 </head>
 <body style="background-color: #F7F7F7">
   <div id="root"></div>
-<script type="text/javascript" src="bundle.7143499fc38252004387.js"></script></body>
+</body>
 
 </html>
