--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -4,6 +4,7 @@
   <title>FEEC 3D Hub</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+  <link href="/style.css" rel="stylesheet" />
 </head>
 <body style="background-color: #F7F7F7">
   <div id="root"></div>
